// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A List Container correctly filters todos depending on the filter state 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    aria-disabled={false}
    aria-labelledby="todoItemButton1Label"
    className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button"
    data-test-id="todo-item"
    id="todoItemButton1Label"
    label="todoItemButton1Label"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-disabled={false}
        aria-label="todoItemCheckbox1Label"
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked-26 Mui-checked MuiIconButton-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="PrivateSwitchBase-input-28"
            data-indeterminate={false}
            id="todoItemCheckbox1Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
  </li>
</ul>
`;

exports[`A List Container renders component 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    aria-disabled={false}
    aria-labelledby="todoItemButton2Label"
    className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button"
    data-test-id="todo-item"
    id="todoItemButton2Label"
    label="todoItemButton2Label"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-disabled={false}
        aria-label="todoItemCheckbox2Label"
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <input
            checked={false}
            className="PrivateSwitchBase-input-28"
            data-indeterminate={false}
            id="todoItemCheckbox2Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
    <span
      className="MuiTouchRipple-root"
    />
  </li>
</ul>
`;

exports[`A List renders component 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    aria-disabled={false}
    aria-labelledby="todoItemButton1Label"
    className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button"
    data-test-id="todo-item"
    id="todoItemButton1Label"
    label="todoItemButton1Label"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-disabled={false}
        aria-label="todoItemCheckbox1Label"
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked-26 Mui-checked MuiIconButton-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="PrivateSwitchBase-input-28"
            data-indeterminate={false}
            id="todoItemCheckbox1Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
  </li>
  <li
    aria-disabled={false}
    aria-labelledby="todoItemButton2Label"
    className="MuiButtonBase-root MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-button"
    data-test-id="todo-item"
    id="todoItemButton2Label"
    label="todoItemButton2Label"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "textDecoration": "",
      }
    }
    tabIndex={0}
  >
    <label
      htmlFor="checkboxLabelId"
    >
      <span
        aria-disabled={false}
        aria-label="todoItemCheckbox2Label"
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-25 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <input
            checked={false}
            className="PrivateSwitchBase-input-28"
            data-indeterminate={false}
            id="todoItemCheckbox2Label"
            onChange={[Function]}
            tabIndex={-1}
            type="checkbox"
          />
        </span>
      </span>
    </label>
  </li>
</ul>
`;
